--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ScreenDneter</title>
-	<link rel="stylesheet" href="css/styles.css" type="text/css">
+	<link rel="stylesheet" href="screendenter.github.io/css/styles.css" type="text/css">
 	<meta  name= "description" content="It is ScreenDnenter corp. Site.">
 	<meta name= "keywords" content= "ScreenDenter, Recerptor, Russian, Corporation">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
