--- a/receraptor/index.html
+++ b/receraptor/index.html
@@ -252,7 +252,7 @@ p{
   <header>
     <div id="logo">
       <a href="https://screendenter.github.io/" title = "На главную">
-        <img src = "img/logo.png" width="90px" alt = "ScreenDneter Logo">
+        <img src = "logo.png" width="90px" alt = "ScreenDneter Logo">
         <span><span class = "screen">Screen</span>Denter </span>
       </a>
     </div>
