--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>ScreenDenter</title>
+	<title>ScreenDenterSite</title>
 	<link rel="stylesheet" href="screendenter.github.io/css/styles.css" type="text/css">
 	<meta  name= "description" content="It is ScreenDnenter corp. Site.">
 	<meta name= "keywords" content= "ScreenDenter, Recerptor, Russian, Corporation">
